force-app/main/default/objects/maps__LiveEvent__c/maps__LiveEvent__c.object-meta.xml
<CustomObject>
    <label>Maps Live Event</label>
    <nameField>
        <displayFormat>LiveEvent-{0000}</displayFormat>
        <label>Maps Live Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>