force-app/main/default/objects/maps__LiveEvent__c/fields/maps__CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>maps__CorrelationId__c</fullName>
    <description>Internal Use</description>
    <inlineHelpText>Internal Use</inlineHelpText>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>