force-app/main/default/objects/maps__LiveEvent__c/fields/maps__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>maps__DeviceId__c</fullName>
    <description>Device Involved with Event &amp; Rule</description>
    <inlineHelpText>Device Involved with Event &amp; Rule</inlineHelpText>
    <label>Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>