force-app/main/default/objects/maps__LiveEvent__c/fields/maps__EntryDateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__EntryDateTime__c</fullName>
    <description>Date &amp; Time of Entry</description>
    <inlineHelpText>Date &amp; Time of Entry</inlineHelpText>
    <label>Entry Date Time</label>
    <type>DateTime</type>
</CustomField>