force-app/main/default/objects/maps__LiveEvent__c/fields/maps__ExitDateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__ExitDateTime__c</fullName>
    <description>Date &amp; Time of Exit</description>
    <inlineHelpText>Date &amp; Time of Exit</inlineHelpText>
    <label>Exit Date Time</label>
    <type>DateTime</type>
</CustomField>