force-app/main/default/objects/maps__LiveEvent__c/fields/maps__LiveEventType__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveEventType__c</fullName>
    <description>Record Type of Event Created</description>
    <inlineHelpText>Record Type of Event Created</inlineHelpText>
    <label>Live Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enters</fullName>
            </value>
            <value>
                <fullName>Exits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>