force-app/main/default/objects/maps__LiveEvent__c/fields/maps__LiveIoTDevice__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveIoTDevice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to IoT Device that Created Event</description>
    <inlineHelpText>Lookup to IoT Device that Created Event</inlineHelpText>
    <label>Live IoT Device</label>
    <referenceTo>maps__LiveIoTDevice__c</referenceTo>
    <relationshipLabel>Live Events</relationshipLabel>
    <relationshipName>LiveEvents</relationshipName>
    <type>Lookup</type>
</CustomField>