force-app/main/default/objects/maps__LiveEvent__c/fields/maps__RuleId__c.field-meta.xml
<CustomField>
    <fullName>maps__RuleId__c</fullName>
    <description>External Rule Id</description>
    <inlineHelpText>External Rule Id</inlineHelpText>
    <label>Rule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>