force-app/main/default/objects/maps__LiveEvent__c/fields/maps__TimeSpentinGeofenceHours__c.field-meta.xml
<CustomField>
    <fullName>maps__TimeSpentinGeofenceHours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of time spent within a Geofence in Hours</description>
    <inlineHelpText>Amount of time spent within a Geofence in Hours</inlineHelpText>
    <label>Time Spent in Geofence (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>